--- a/gen_rest_server/Cargo.toml
+++ b/gen_rest_server/Cargo.toml
@@ -4,3 +4,7 @@ version = "0.1.0"
 authors = ["Mark <mverleg.noreply@gmail.com>"]
 
 [dependencies]
+
+[lib]
+name = "gen_rest_server"
+path = "lib.rs"
