--- a/apilib/Cargo.toml
+++ b/apilib/Cargo.toml
@@ -6,7 +6,7 @@ authors = ["Mark <mverleg.noreply@gmail.com>"]
 [dependencies]
 serde = "1.0"
 serde_derive = "1.0"
-serde_json = "1.0"
+simple-server = "0.3"
 
 [lib]
 name = "apilib"
