--- a/gen_rest_client/Cargo.toml
+++ b/gen_rest_client/Cargo.toml
@@ -4,6 +4,10 @@ version = "0.1.0"
 authors = ["Mark <mverleg.noreply@gmail.com>"]
 
 [dependencies]
+serde = "1.0"
+serde_derive = "1.0"
+serde_json = "1.0"
+derive-new = "0.5"
 
 [lib]
 name = "gen_rest_client"
